# automatica-2024-code

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: attas_sp.py  duffing.py  linsys.py  linsys_batches.py  linsys_timeit.py  ssest_comp.m
scripts/: duffing-plot.py  duffing-vsi-run  duffing-vsi-submit  linsys-ssest-cat.py  linsys-ssest-run  linsys-ssest-submit.py  linsys-ssest-test  linsys-timeit-run  linsys-timeit-submit  linsys-vsi-cat.py  linsys-vsi-run  linsys-vsi-submit  linsys-vsi-test
src/gvispe/: __init__.py  common.py  estimators.py  modeling.py  sde.py  stats.py
